@@ -11,7 +11,8 @@ packagesPacman=(
     "dunst" 
     "starship"
     "mpv" 
-    "thunar" 
+    "thunar"
+    "nautilus" 
     "mousepad"
     "noto-fonts" 
     "otf-font-awesome" 
