@@ -196,6 +196,14 @@
         "tooltip": false
     },
 
+    // Hyprshade
+    "custom/hyprshade": {
+        "format": "",
+        "on-click": "sleep 0.1; ~/dotfiles/hypr/scripts/hyprshade.sh",
+        "on-click-right": "sleep 0.1; ~/dotfiles/hypr/scripts/hyprshade.sh rofi",
+        "tooltip": false
+    },
+
     // Keyboard State
     "keyboard-state": {
         "numlock": true,
