@@ -47,6 +47,7 @@
         "group/hardware",
         "custom/cliphist",
         "idle_inhibitor",
+        "custom/hyprshade",
         "tray",
         "custom/exit",
         "custom/ml4w-welcome",
