@@ -163,6 +163,7 @@ window#waybar.empty #window {
 #custom-settings, 
 #custom-wallpaper, 
 #custom-system,
+#custom-hyprshade,
 #custom-waybarthemes {
     margin-right: 23px;
     font-size: 20px;
@@ -170,7 +171,12 @@ window#waybar.empty #window {
     opacity: 0.8;
     color: @iconcolor;
 }
- 
+
+#custom-hyprshade {
+    margin-left:4px;
+    margin-right:12px;
+}
+
 #custom-system {
     margin-right:15px;
 }
