@@ -65,6 +65,14 @@
         "tooltip": false
     },
 
+    // Hyprshade
+    "custom/hyprshade": {
+        "format": "",
+        "on-click": "sleep 0.1; ~/dotfiles/hypr/scripts/hyprshade.sh",
+        "on-click-right": "sleep 0.1; ~/dotfiles/hypr/scripts/hyprshade.sh rofi",
+        "tooltip": false
+    },
+
     // Updates Count
     "custom/updates": {
         "format": "  {}",
