@@ -164,6 +164,7 @@ window#waybar.empty #window {
 #custom-settings, 
 #custom-wallpaper, 
 #custom-system,
+#custom-hyprshade,
 #custom-waybarthemes {
     margin-right: 23px;
     font-size: 20px;
@@ -171,12 +172,16 @@ window#waybar.empty #window {
     color: @iconcolor;
 }
  
- #custom-waybarthemes,#custom-system {
+#custom-hyprshade {
+    margin-left:4px;
+    margin-right:12px;
+}
+
+#custom-waybarthemes,#custom-system {
      margin-right:15px;
- }
+}
 
-
- #custom-ml4w-welcome {
+#custom-ml4w-welcome {
     margin-right: 15px;
     background-image: url("../assets/ml4w-icon.png");
     background-repeat: no-repeat;
@@ -396,7 +401,7 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #tray {
-    background-color: #2980b9;
+    margin:0px 10px 0px 0px;
 }
 
 #tray > .passive {
